--- a/index.html
+++ b/index.html
@@ -1,23 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year My New Website</title>
+
+    <link rel="stylesheet" href="styles/new-year.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+
+
+
 </head>
+
 <body>
+    <header class="header">
+        <div class="banner">
+            <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words</p>
 
-    <header>
+            <button class="btn-primary">Contact Us</button>
 
+        </div>
     </header>
 
     <main>
+        <section class="failures">
+            <div>
+                <img class="profile-picture" src="images/person.png" alt="">
+            </div>
+
+            <div>
+                <h2 class="section-title">My failures of previous year</h2>
+
+                <p class="section-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                    roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                    McClintock.</p>
+
+                <ul>
+                    <il><svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular belief, is not simply.</il>
+                    <br>
+                    <il><svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                        Contrary to popular belief.</il>
+                    <br>
+                    <il><svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular , is not simply.</il>
+                    <br>
+                    <il><svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular belief, is not simply.</il>
+                    <br>
+                    <il><svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular simply.</il>
+                </ul>
+
+            </div>
+
+
+        </section>
 
     </main>
 
     <footer>
-        
+
     </footer>
-    
+
 </body>
+
 </html>
